# stdc

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  compile_commands.json  main.c  plan.md
cmake/: llvm-toolchain.cmake
docs/: types.md
include/stdc/: stdc.h  type.h
include/stdc/container/: array.h  carray.h  container.h
include/stdc/core/: core.h
include/stdc/result/: base.h  result.h
include/stdc/type/: any.h  base.h  bool.h  byte.h  category.h  char.h  float.h  none.h  sinteger.h  type.h  uinteger.h
include/stdc/type/lists/: all.def  all_no_none.def  bool.def  byte.def  char.def  float.def  none.def  sinteger.def  uinteger.def
src/: CMakeLists.txt
src/stdc/core/: core.c
src/stdc/type/: any.c  base.c  bool.c  byte.c  category.c  char.c  float.c  integer.c  none.c  sinteger.c  type.c  uinteger.c
tests/: CMakeLists.txt  type_enum_test.c
